syntax = "proto3";
option go_package = "./pb";
package pb;

message GetUserInfoRes {
    int64 id = 1;
}

message GetUserInfoReq {
    int64 id = 1;
    string name = 2;
}

service RpcUserService {
    rpc RpcGetUserInfo (GetUserInfoRes) returns (GetUserInfoReq);
}